# ailloy

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  README.md
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
docs/: api-vision.md
docs/superpowers/plans/: 2026-04-13-embedding-support.md
docs/superpowers/specs/: 2026-04-13-embedding-support-design.md
src/: anthropic.rs  azure.rs  azure_discover.rs  banner.rs  blocking.rs  cli.rs  client.rs  config.rs  config_tui.rs  conversation.rs  discover.rs  error.rs  foundry.rs  lib.rs  local_agent.rs  main.rs  ollama.rs  openai.rs  provider.rs  terminal.rs  types.rs  update.rs  vertex.rs
src/commands/: ai.rs  azure_discover.rs  chat.rs  completion.rs  config_cmd.rs  consent.rs  discover.rs  embed.rs  image.rs  mod.rs  nodes.rs  providers.rs  skill.rs  tui.rs  util.rs
src/doc/: ai-reference.md
